Изменен шаблон регистрации

--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}{% load static %}{% block pageContent %}
 <style>
     body{
-        background-image:url('{% static "assets/default/img/wallpaper.png" %}');
+        background-image:url('{% static "assets/default/img/ply.jpg" %}');
         background-repeat:no-repeat;
         background-size:cover;
     }
